# mylang

./: .clangd  .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.hpp  block.cpp  block.hpp  buildin.hpp  control_statements.cpp  control_statements.hpp  correction.ts  debug.cpp  debug.hpp  display.cpp  errors.hpp  expressions.cpp  expressions.hpp  function.cpp  function.hpp  kind.cpp  kind.hpp  main.cpp  operators.cpp  operators.hpp  parser.cpp  parser.hpp  prog.ts  program.cpp  program.hpp  scope.cpp  scope.hpp  statement.cpp  statement.hpp  statements.hpp  string_enum.hpp  symbol.cpp  symbol.hpp  text.hpp  token.hpp  (+11 more)
toys/: 4dumpast.cpp  4dumpast.ll  ast.txt  hoge  ir.ll  ir.s
